# rust-grpc-smartcore

./: Cargo.toml  Dockerfile  README.md  build.rs
proto/: servicebase.proto
src/: client.rs  server.rs
