[package]
name = "smartcore-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc-smartcore-server"
path = "src/server.rs"

[[bin]]
name = "grpc-smartcore-client"
path = "src/client.rs"

[dependencies]
smartcore = {git = "https://github.com/smartcorelib/smartcore.git", branch = "development" }
tonic = { version = "0.8", features = ["transport"] }
prost = "0.11"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "signal"] }
triggered = "0.1.2"
ctrlc = "3.2.3"

[build-dependencies]
tonic-build = "0.8"